"alterado a cor no tema claro"

--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ li {
 }
 
 .light-theme {
-    --bg: var(--green);
+    --bg: --white;
     --fontColor: var(--black);
     --btnBg:var(--black);
     --btnFontColor: var(--white);
